Error Mitigation/MagiCoder/Data/javax_sound_sampled_spi/javax_sound_sampled_spiOutputResult.txt
Sample: AudioFileWriter_2
----------------------------------------------------------------
output:
./Data/javax_sound_sampled_spi/javaFiles/AudioFileWriter_2.java:6: error: <anonymous AudioFileWriter_2$1> is not abstract and does not override abstract method write(AudioInputStream,Type,File) in AudioFileWriter
        AudioFileWriter writer = new AudioFileWriter() {
                                                       ^
1 error


================================================================

Sample: FormatConversionProvider_5
----------------------------------------------------------------
output:
./Data/javax_sound_sampled_spi/javaFiles/FormatConversionProvider_5.java:8: error: <anonymous FormatConversionProvider_5$1> is not abstract and does not override abstract method getAudioInputStream(Encoding,AudioInputStream) in FormatConversionProvider
        FormatConversionProvider provider = new FormatConversionProvider() {
                                                                           ^
1 error


================================================================

Sample: MixerProvider_3
----------------------------------------------------------------
output:
./Data/javax_sound_sampled_spi/javaFiles/MixerProvider_3.java:6: error: <anonymous MixerProvider_3$1> is not abstract and does not override abstract method getMixer(Info) in MixerProvider
        MixerProvider mixerProvider = new MixerProvider() {
                                                          ^
./Data/javax_sound_sampled_spi/javaFiles/MixerProvider_3.java:10: error: incompatible types: Info[] cannot be converted to Info
        Mixer.Info info = new Mixer.Info[1];
                          ^
./Data/javax_sound_sampled_spi/javaFiles/MixerProvider_3.java:11: error: array required, but Info found
        Mixer mixer = mixerProvider.getMixer(info[0]);
                                                 ^
3 errors


================================================================

